# wallee

./: Cargo.toml  build.rs
src/: backtrace.rs  chain.rs  ensure.rs  error.rs  kind.rs  lib.rs  ptr.rs
tests/: test_backtrace.rs  test_boxed.rs  test_context.rs  test_ensure.rs  test_ffi.rs  test_location.rs
tests/ui/: chained-comparison.rs  empty-ensure.rs  must-use.rs  must-use.stderr  no-impl.rs  no-impl.stderr  temporary-value.rs  temporary-value.stderr  wrong-interpolation.rs
