[package]
name = "wallee"
version = "0.2.6"
authors = ["David Tolnay <dtolnay@gmail.com>", "Todd Hardman <todd.hardman@gmail.com>"]
categories = ["rust-patterns", "no-std"]
description = "Flexible concrete Error type built on std::error::Error with caller location tracking"
documentation = "https://docs.rs/wallee"
edition = "2024"
keywords = ["error", "error-handling"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tjhardman/wallee"
# rust-version = "1.85"

[dev-dependencies]
futures = { version = "0.3", default-features = false }
rustversion = "1.0"
syn = { version = "2.0", features = ["full"] }
thiserror = "2.0.12"
# anyhow = "1.0.98"
trybuild = { version = "1.0.110", features = ["diff"] }

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "doc_cfg", "--generate-link-to-definition"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(error_generic_member_access)', 'cfg(doc_cfg)', 'cfg(wallee_nightly_testing)'] }
